ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__fn-declaration-with-params-and-body.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"fn foo(a, b, c) { a + b + c; }\")"
---
FnDeclaration {
    meta: DeclarationMeta {
        is_captured_in_closure: Some(
            false,
        ),
    },
    ident: "foo",
    params: [
        "a",
        "b",
        "c",
    ],
    body: [
        ExprStmt(
            Binary {
                lhs: Binary {
                    lhs: Identifier(
                        "a",
                    ),
                    op: Plus,
                    rhs: Identifier(
                        "b",
                    ),
                },
                op: Plus,
                rhs: Identifier(
                    "c",
                ),
            },
        ),
    ],
}
