ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__if-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"\n                if condition {\n                    if_block();\n                }\"#)"
---
IfElseStmt {
    condition: Identifier(
        "condition",
    ),
    if_block: [
        ExprStmt(
            FnCall {
                callee: Identifier(
                    "if_block",
                ),
                args: [],
            },
        ),
    ],
    else_block: None,
}
