ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__while-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"while true { while_block(); }\"#)"
---
WhileStmt {
    condition: BoolLit(
        true,
    ),
    body: [
        ExprStmt(
            FnCall {
                callee: Identifier(
                    "while_block",
                ),
                args: [],
            },
        ),
    ],
}
